Format config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,23 +17,27 @@ jobs:
           name: Set up a virtual environment
           command: |
             python3 -m venv venv
+
       - run:
           name: Run Flake8 on source and test files
           command: |
             . venv/bin/activate
             pip install --upgrade flake8
             flake8 ./src ./tests
+
       - run:
           name: Install the package
           command: |
             . venv/bin/activate
-            pip install --upgrade setuptools wheel
+            pip install --upgrade setuptools
             pip install .
+
       - run:
           name: Run the unit tests
           command: |
             . venv/bin/activate
             python setup.py test
+
       - store_artifacts:
           path: htmlcov
           destination: test-reports
