Remove unnecessary steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,29 +17,21 @@ jobs:
           name: Set up a virtual environment
           command: |
             python3 -m venv venv
-
-      - run:
-          name: Install/upgrade flake8 linter
-          command: |
             . venv/bin/activate
-            pip install --upgrade flake8
+            pip install --upgrade pip
 
       - run:
           name: Run Flake8 on source and test files
           command: |
             . venv/bin/activate
+            pip install --upgrade flake8
             flake8 ./src ./tests
-
-      - run:
-          name: Install/upgrade setup-related packages
-          command: |
-            . venv/bin/activate
-            pip install --upgrade pip setuptools wheel
 
       - run:
           name: Install the package
           command: |
             . venv/bin/activate
+            pip install --upgrade setuptools wheel
             pip install .
 
       - run:
