Set up YAPF check on CircleCI

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ test = pytest
 
 [tool:pytest]
 addopts = --cov --cov-report html --cov-report term-missing --cov-fail-under 95
+
+[yapf]
+blank_line_before_nested_class_or_def = true
