--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,14 @@ jobs:
             pip install --upgrade pip
 
       - run:
-          name: Run Flake8 on source and test files
+          name: Run YAPF format check on source and test code
+          command: |
+            . venv/bin/activate
+            pip install --upgrade yapf
+            yapf --diff --recursive ./src ./tests
+
+      - run:
+          name: Run Flake8 linter on source and test code
           command: |
             . venv/bin/activate
             pip install --upgrade flake8
